Fix sprite misalignment on save color icons, closes #1948
The colored icons in the sprite had a 5px offset from the left edge
rather than a 7px offset the rest of the icons use. I previously had to
bump the background-position to fix this.

--- a/css/app.css
+++ b/css/app.css
@@ -577,7 +577,7 @@ button[disabled] .icon.nearby     { background-position: -340px -40px;}
 .icon.line.created   { background-position: -320px -100px;}
 .icon.area.created   { background-position: -340px -100px;}
 
-.icon.point.modified  { background-position: -24px 0; }
+.icon.point.modified  { background-position: -22px 0; }
 
 .icon.modified { opacity: .5; }
 
